# SAARTHI

./: .gitignore  README.md  pyproject.toml
chatbot/: main.py
chatbot/agents/: account_statement_tools.py  agents.py  tools.py
chatbot/app/: api.py  html_template.py  index.py  websocket_manager.py
chatbot/static/: registry.html  script.js  styles.css
chatbot/static/messageHandlers/: addImageMessage.js  addListBasedTableMessage.js  addMessage.js  addNewTableMessage.js  addServerMessage.js  addTableMessage.js  handleMessage.js  toggleLoadingIndicator.js
chatbot/static/utils/: extractKeyValueFromList.js  formatJSON.js  index.js  parseConcatenatedJSON.js
chatbot/static/websocket/: connectWebSocket.js
chatbot/utils/: analytical_functions.py  helpers.py
data/: credit_card_transactions.csv  fake_account_statement.csv
smart_analyst_autogen/: distribute_expenses.csv  main.py  websocket_test.py
smart_analyst_autogen/tools/: __init__.py  bus_func.py  business_functions.py
