[tool.poetry]
name = "smart-analyst-autogen"
version = "0.1.0"
description = ""
authors = ["Rajat Mishra <mishra.rajat91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
ag2 = "^0.7.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
pydantic = "2.8.2"
gradio = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
