[tool.poetry]
name = "SAARTHI"
version = "0.1.0"
description = ""
authors = ["Rajat Mishra <mishra.rajat91@gmail.com>"]
readme = "README.md"
packages = [{include = "chatbot", from="chatbot"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
ag2 = "^0.7.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
pydantic = "2.8.2"
gradio = "^5.13.0"
fastapi = "^0.115.7"
plotly = "^5.24.1"
kaleido = "0.2.1"
tabulate = "^0.9.0"
boto3 = "^1.36.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
